Git commit with changes