@@ -1,12 +1,9 @@
 package com.Life_ledger.service;
 
-import com.Life_ledger.Enum.TransactionEnum;
-import com.Life_ledger.dto.analytic.CategoryInsightDto;
-import com.Life_ledger.dto.analytic.DashboardStatsDto;
-import com.Life_ledger.dto.analytic.MonthlyInsightDto;
+import com.Life_ledger.dto.analytic.*;
 import com.Life_ledger.entity.Transaction;
 import com.Life_ledger.repository.TransactionRepository;
-import com.Life_ledger.service.AnalyticsService;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -21,118 +18,149 @@ public class AnalyticsServiceImpl implements AnalyticsService {
 
     private final TransactionRepository transactionRepository;
 
-    private boolean isDebit(Transaction t) {
-        return t.getTypeTransaction() == TransactionEnum.DEBIT;
-    }
+    private static final List<String> COLORS = List.of(
+            "#3B82F6", "#10B981", "#F59E0B", "#EF4444",
+            "#8B5CF6", "#EC4899", "#06B6D4", "#F43F5E");
 
-    private boolean isCredit(Transaction t) {
-        return t.getTypeTransaction() == TransactionEnum.CREDIT;
-    }
-
-    // -------------------------------------------------------------
-    // 1️⃣ DASHBOARD SUMMARY
-    // -------------------------------------------------------------
     @Override
-    public DashboardStatsDto getDashboardStats(Long userId) {
+    public DashboardResponseDTO getDashboard(Long userId, Long accountId) {
 
-        List<Transaction> txns = transactionRepository.findByBankAccount_User_Id(userId);
+        List<Transaction> txns = transactionRepository.findAllByAccount(accountId);
 
-        double totalSpent = txns.stream()
-                .filter(this::isDebit)
-                .mapToDouble(t -> t.getAmount().abs().doubleValue())
-                .sum();
-
-        double totalIncome = txns.stream()
-                .filter(this::isCredit)
-                .mapToDouble(t -> t.getAmount().doubleValue())
-                .sum();
-
-        double budgetLeft = totalIncome - totalSpent;
-
-        long subscriptions = txns.stream()
-                .map(Transaction::getMerchant)
-                .filter(Objects::nonNull)
-                .collect(Collectors.groupingBy(m -> m, Collectors.counting()))
-                .values()
-                .stream()
-                .filter(count -> count > 1)
-                .count();
-
-        return new DashboardStatsDto(
-                totalSpent,
-                totalIncome,
-                budgetLeft,
-                txns.size(),
-                subscriptions,
-                totalIncome == 0 ? 0 : (budgetLeft / totalIncome));
+        return DashboardResponseDTO.builder()
+                .monthlyTimeline(buildMonthlyTimeline(txns))
+                .categories(buildCategoryBreakdown(txns))
+                .merchants(buildMerchantBreakdown(txns))
+                .recurringVsOneTime(buildRecurringSplit(txns))
+                .burnRate(buildBurnRate(txns))
+                .yearOverYear(buildMonthlyTimeline(txns))
+                .build();
     }
 
-    // -------------------------------------------------------------
-    // 2️⃣ CATEGORY SPENDING (WITH ACCOUNT FILTER)
-    // -------------------------------------------------------------
-    @Override
-    public List<CategoryInsightDto> getCategorySpending(Long userId, int days, Long accountId) {
-        LocalDate cutoff = LocalDate.now().minusDays(days);
+    /* ---------------- MONTHLY TIMELINE ---------------- */
+    private List<MonthlyInsightDto> buildMonthlyTimeline(List<Transaction> txns) {
 
-        List<Transaction> txns;
+        Map<String, Double> result = new LinkedHashMap<>();
+        LocalDate now = LocalDate.now();
 
-        if (accountId != null) {
-            txns = transactionRepository.findByBankAccount_User_IdAndBankAccount_IdAndDateAfter(
-                    userId, accountId, cutoff);
-        } else {
-            txns = transactionRepository.findByBankAccount_User_IdAndDateAfter(
-                    userId, cutoff);
+        for (int i = 11; i >= 0; i--) {
+            LocalDate m = now.minusMonths(i);
+            String monthName = m.getMonth().getDisplayName(TextStyle.SHORT, Locale.ENGLISH);
+
+            double total = txns.stream()
+                    .filter(t -> t.getDate().getMonthValue() == m.getMonthValue()
+                            && t.getDate().getYear() == m.getYear())
+                    .mapToDouble(t -> Math.abs(t.getAmount().doubleValue()))
+                    .sum();
+
+            result.put(monthName, total);
         }
 
-        Map<String, Double> categoryTotals = new HashMap<>();
+        return result.entrySet().stream()
+                .map(e -> new MonthlyInsightDto(e.getKey(), e.getValue()))
+                .toList();
+    }
+
+    /* ---------------- CATEGORY BREAKDOWN ---------------- */
+    private List<CategoryInsightDto> buildCategoryBreakdown(List<Transaction> txns) {
+
+        Map<String, CategoryInsightDto> map = new HashMap<>();
 
         for (Transaction t : txns) {
-            if (isDebit(t)) {
-                String category = t.getCategory() != null ? t.getCategory().getName() : "Uncategorized";
-                categoryTotals.put(category,
-                        categoryTotals.getOrDefault(category, 0.0) + Math.abs(t.getAmount().doubleValue()));
-            }
+            String category = (t.getCategory() != null)
+                    ? t.getCategory().getName()
+                    : "Uncategorized";
+
+            map.putIfAbsent(category, new CategoryInsightDto(category, 0, 0, null));
+
+            CategoryInsightDto dto = map.get(category);
+            dto.setAmount(dto.getAmount() + Math.abs(t.getAmount().doubleValue()));
+            dto.setCount(dto.getCount() + 1);
         }
 
-        return categoryTotals.entrySet().stream()
-                .map(e -> new CategoryInsightDto(e.getKey(), e.getValue()))
-                .collect(Collectors.toList());
+        List<CategoryInsightDto> sorted = map.values().stream()
+                .sorted(Comparator.comparingDouble(CategoryInsightDto::getAmount).reversed())
+                .limit(6)
+                .toList();
+
+        // Assign colors so donut chart works
+        for (int i = 0; i < sorted.size(); i++) {
+            sorted.get(i).setColor(COLORS.get(i % COLORS.size()));
+        }
+
+        return sorted;
     }
 
-    // Keep original method for compatibility
-    @Override
-    public List<CategoryInsightDto> getCategorySpending(Long userId, int days) {
-        return getCategorySpending(userId, days, null);
-    }
+    /* ---------------- MERCHANT BREAKDOWN ---------------- */
+    private List<MerchantInsightDto> buildMerchantBreakdown(List<Transaction> txns) {
 
-    // -------------------------------------------------------------
-    // 3️⃣ MONTHLY SPENDING
-    // -------------------------------------------------------------
-    @Override
-    public List<MonthlyInsightDto> getMonthlySpending(Long userId, int months) {
-
-        LocalDate start = LocalDate.now().minusMonths(months);
-
-        List<Transaction> txns = transactionRepository.findByBankAccount_User_IdAndDateAfter(userId, start);
-
-        Map<String, double[]> monthTotals = new TreeMap<>();
+        Map<String, MerchantInsightDto> map = new HashMap<>();
 
         for (Transaction t : txns) {
+            String merchant = (t.getMerchant() == null || t.getMerchant().isBlank())
+                    ? "Unknown"
+                    : t.getMerchant().split(" ")[0];
 
-            String key = t.getDate().getMonth().getDisplayName(TextStyle.SHORT, Locale.ENGLISH)
-                    + " " + t.getDate().getYear();
+            map.putIfAbsent(merchant, new MerchantInsightDto(merchant, 0, 0));
 
-            monthTotals.putIfAbsent(key, new double[] { 0, 0 }); // [income, spending]
-
-            if (isDebit(t)) {
-                monthTotals.get(key)[1] += Math.abs(t.getAmount().doubleValue());
-            } else if (isCredit(t)) {
-                monthTotals.get(key)[0] += t.getAmount().doubleValue();
-            }
+            MerchantInsightDto dto = map.get(merchant);
+            dto.setAmount(dto.getAmount() + Math.abs(t.getAmount().doubleValue()));
+            dto.setCount(dto.getCount() + 1);
         }
 
-        return monthTotals.entrySet().stream()
-                .map(e -> new MonthlyInsightDto(e.getKey(), e.getValue()[0], e.getValue()[1]))
-                .collect(Collectors.toList());
+        return map.values().stream()
+                .sorted(Comparator.comparingDouble(MerchantInsightDto::getAmount).reversed())
+                .limit(8)
+                .toList();
+    }
+
+    /* ---------------- RECURRING VS ONE-TIME ---------------- */
+    private RecurringVsOneTimeDto buildRecurringSplit(List<Transaction> txns) {
+
+        Map<String, Long> merchantFreq = txns.stream()
+                .collect(Collectors.groupingBy(Transaction::getMerchant, Collectors.counting()));
+
+        double recurringTotal = 0;
+        double oneTimeTotal = 0;
+
+        for (Transaction t : txns) {
+            long count = merchantFreq.getOrDefault(t.getMerchant(), 1L);
+            double amt = Math.abs(t.getAmount().doubleValue());
+
+            if (count >= 3)
+                recurringTotal += amt;
+            else
+                oneTimeTotal += amt;
+        }
+
+        return new RecurringVsOneTimeDto(recurringTotal, oneTimeTotal);
+    }
+
+    /* ---------------- BURN RATE ---------------- */
+    private BurnRateDto buildBurnRate(List<Transaction> txns) {
+
+        LocalDate now = LocalDate.now();
+        int month = now.getMonthValue();
+        int year = now.getYear();
+
+        double monthlySpend = txns.stream()
+                .filter(t -> t.getDate().getMonthValue() == month &&
+                        t.getDate().getYear() == year)
+                .mapToDouble(t -> Math.abs(t.getAmount().doubleValue()))
+                .sum();
+
+        int day = now.getDayOfMonth();
+        int daysInMonth = now.lengthOfMonth();
+        int daysLeft = daysInMonth - day;
+
+        double daily = day > 0 ? monthlySpend / day : 0;
+        double projected = daily * daysInMonth;
+
+        return BurnRateDto.builder()
+                .current(monthlySpend)
+                .daily(daily)
+                .projected(projected)
+                .daysLeft(daysLeft)
+                .build();
     }
 }
